# deep-trinity

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  rust-toolchain
.cargo/: config
.github/workflows/: rust.yml
bot/: Cargo.toml
bot/src/: advanced.rs  lib.rs  mcts_puct.rs  multi.rs  puct.rs  simple.rs  simple2.rs  simple_tree.rs  template.rs  tree.rs
core/: Cargo.toml
core-wasm/: Cargo.toml
core-wasm/src/: lib.rs
core/src/: bitgrid.rs  grid.rs  helper.rs  lib.rs  move_search.rs
core/src/move_search/: astar.rs  bruteforce.rs  humanly_optimized.rs
crates/bot/: Cargo.toml
crates/bot/src/: helper.rs  lib.rs  pc.rs  template.rs  tree.rs
crates/bot/src/helper/: fixed_stack_finder.rs  simple_stack_finder.rs  stack_tree.rs
crates/core/: Cargo.toml
crates/core/src/: helper.rs  lib.rs  move_search.rs  prelude.rs
crates/core/src/move_search/: astar.rs  bruteforce.rs  heuristic_bruteforce.rs
crates/deep-trinity-bot/: Cargo.toml
crates/deep-trinity-bot/src/: helper.rs  lib.rs  mcts_puct.rs  simple.rs  simple_tree.rs  template.rs  tree.rs
crates/deep-trinity-bot/src/helper/: fixed_stack_finder.rs  stack_tree.rs
crates/deep-trinity-core/: Cargo.toml
crates/deep-trinity-core/src/: bot.rs  helper.rs  lib.rs  prelude.rs
crates/deep-trinity-core/src/move_search/: heuristic_bruteforce.rs  humanly_optimized.rs
crates/deep-trinity-grid/: Cargo.toml
crates/deep-trinity-grid/src/: lib.rs
crates/deep-trinity-tree/: Cargo.toml
crates/grid/src/: bitgrid.rs  lib.rs
crates/list-piece-consumption-patterns/: Cargo.toml
crates/list-piece-consumption-patterns/src/: main.rs
crates/ml-core/: Cargo.toml
crates/ml-core/src/: async_session.rs  lib.rs
crates/move-finder/: Cargo.toml
crates/move-finder/src/: main.rs
crates/pc-finder/: Cargo.toml
crates/pc-finder/src/: main.rs
crates/playground/: Cargo.toml
crates/playground/src/: cli.rs  main.rs  memo.rs  opener_adviser.rs  template.rs  tree.rs  tspin.rs
crates/py-core/: Cargo.toml  deep_trinity.pyi  pyproject.toml
crates/py-core/python-tests/: pyproject.toml  test_game.py
crates/py-core/src/: core_wrapper.rs  lib.rs
crates/stacking-resolver/: Cargo.toml
crates/stacking-resolver/src/: lib.rs
crates/tree/src/: arena.rs
crates/web-core/: Cargo.toml
crates/web-core/src/: lib.rs
grid/: Cargo.toml
grid/src/: bitgrid.rs  lib.rs
ml/: .gitignore  README.md  detris_zero_a2c.ipynb  pyproject.toml
ml-core/: Cargo.toml
ml-core/src/: lib.rs
ml/detris/: environment.py
ml/detris/a2c/: __main__.py  main.py
ml/detris/helper/: __init__.py
ml/detris/simple_a2c/: __main__.py  main.py
ml/detris/zero/: __main__.py  batch.py  main.py  mcts.py  model.py  predictor.py  util.py
ml/detris/zero/a2c/: agent.py  main.py
ml/detris/zero/a2c/agent/: __init__.py  basic_agent.py  multiprocess_agent.py
ml/detris/zero/a2c_bk/: main.py
ml/detris/zero/util/: ipc.py
move-finder/: Cargo.toml
move-finder/src/: main.rs
playground/: Cargo.toml
playground/src/: cli.rs  main.rs  memo.rs  tspin.rs
py-core/: Cargo.toml  deep_trinity.pyi
py-core/examples/: game.py
py-core/python-tests/: test_game.py
py-core/src/: core_wrapper.rs  lib.rs
script/: install_py_core.sh
tools/ppt-capture/: pyproject.toml
tools/ppt-capture/ppt_capture/: __main__.py
tools/ppt-capture/tests/: test_ppt_capture.py
tree/: Cargo.toml
tree/src/: arena.rs  lib.rs
web/: .editorconfig  .eslintrc.js  README.md  bun.lockb  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
web-core/: Cargo.toml
web-core/src/: lib.rs
web/templates/: generate.sh
web/templates/ts-lib/: README.md  package.json  tsconfig.json
web/templates/wasm-app/: bootstrap.js  index.html  package.json
web/templates/wasm-app/src/: index.tsx
