[package]
name = "core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.8.0"
rand = "0.7"
bitflags = "1.2"
num-traits = "0.2.14"
