[tool.poetry]
name = "detris"
version = "0.1.0"
description = ""
license = "Apache License 2.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
tensorboard = "^2.1.0"
tensorflow-estimator = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
