[package]
name = "py-core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "detris"
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
pyo3 = { version = "0.9", features = ["extension-module"] }
rand = "0.7"
