[package]
name = "deep-trinity-bot"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2021"

[dependencies]
deep-trinity-core = { path = "../deep-trinity-core" }
deep-trinity-grid = { path = "../deep-trinity-grid" }
deep-trinity-tree = { path = "../deep-trinity-tree" }
rand = "0.8"
bitvec = "1.0"

[dev-dependencies]
chrono = "0.4"
prost = "0.10.4"
pprof = { version = "0.10.0", features = ["prost-codec"] }
