[package]
name = "move-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep-trinity-core = { path = "../deep-trinity-core" }
deep-trinity-grid = { path = "../deep-trinity-grid" }
deep-trinity-bot = { path = "../deep-trinity-bot" }
deep-trinity-tree = { path = "../deep-trinity-tree" }
rand = "0.8"
clap =  { version = "3.0", features = ["derive"] }
assert_cmd = "2.0"
