[package]
name = "playground"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2021"

[dependencies]
deep-trinity-core = { path = "../deep-trinity-core" }
deep-trinity-grid = { path = "../deep-trinity-grid" }
deep-trinity-bot = { path = "../deep-trinity-bot" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.8"
termion = "1.5"
anyhow = "1.0"
regex = "1"
once_cell = "1.13.0"
