[package]
name = "py-core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deep_trinity"
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
ml-core = { path = "../ml-core" }
rand = "0.8"

[dependencies.pyo3]
version = "0.15"
features = ["abi3-py36"]

[features]
# https://pyo3.rs/v0.15.1/faq.html
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.15"
