[package]
name = "py-core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deep_trinity"
crate-type = ["cdylib"]

[dependencies]
deep-trinity-grid = { path = "../deep-trinity-grid" }
deep-trinity-core = { path = "../deep-trinity-core" }
ml-core = { path = "../ml-core" }
rand = "0.8"
pyo3 = "0.19.2"

[features]
# https://pyo3.rs/v0.19.2/faq.html
extension-module = ["pyo3/extension-module"]

[build-dependencies]
# https://pyo3.rs/v0.19.2/building_and_distribution#macos
pyo3-build-config = "0.19.2"
