[package]
name = "web-core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
core = { path = "../core" }
grid = { path = "../grid" }
bot = { path = "../bot" }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
