[tool.poetry]
name = "ppt-capture"
version = "0.1.0"
description = ""
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mss = "^6.1"
opencv-python = "^4.5"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
